# musicoop

./: .gitignore  Dockerfile  LICENSE  README.md  dev.env  docker-compose.yaml  pyproject.toml  requirements.txt  start.sh
musicoop/: app.py
musicoop/api/auth/: login.py
musicoop/api/posts/: comments.py  contribuitions.py  music.py  post.py  project.py
musicoop/api/routes/: auth.py  posts.py
musicoop/controller/: comment.py  contribuition.py  music.py  post.py  project.py  user.py
musicoop/core/: auth.py
musicoop/database/: __init__.py
musicoop/models/: __init__.py  comment.py  contribuition.py  music.py  post.py  project.py  user.py  vote.py
musicoop/schemas/: base_schema.py  comment.py  contribuition.py  music.py  post.py  project.py  token.py  user.py
musicoop/settings/: logs.py
musicoop/static/: audio%3A4646
musicoop/tests/: test_musicoop.py  test_post.py  test_user.py
musicoop/utils/: aws_connection.py  email.py  login.py  save_file.py  streamming.py
